@@ -290,6 +290,7 @@ class DarwinPolicyAPIv1(View):
         for frontend in policy.frontend_set.all():
             for node in frontend.get_nodes():
                 node.api_request("services.rsyslogd.rsyslog.build_conf", frontend.pk)
+                node.api_request("services.rsyslogd.rsyslog.restart_service")
 
         Cluster.api_request("services.darwin.darwin.write_policy_conf", policy.pk)
         Cluster.api_request("services.darwin.darwin.reload_conf")
@@ -360,6 +361,7 @@ class DarwinPolicyAPIv1(View):
         for frontend in policy.frontend_set.all():
             for node in frontend.get_nodes():
                 node.api_request("services.rsyslogd.rsyslog.build_conf", frontend.pk)
+                node.api_request("services.rsyslogd.rsyslog.restart_service")
 
         if DarwinBuffering.objects.filter(destination_filter__policy=policy).exists():
             DarwinPolicy.update_buffering()
@@ -399,6 +401,7 @@ class DarwinPolicyAPIv1(View):
                 for frontend in policy.frontend_set.all():
                     for node in frontend.get_nodes():
                         node.api_request("services.rsyslogd.rsyslog.build_conf", frontend.pk)
+                        node.api_request("services.rsyslogd.rsyslog.restart_service")
 
                 Cluster.api_request("services.darwin.darwin.reload_conf")
 
