@@ -59,4 +59,9 @@ if __name__ == "__main__":
                 print("Error while updating rsyslog configuration of frontend '{}': "
                       "{}.".format(frontend.name, api_res.get("message")))
 
+        node.api_request("services.rsyslogd.rsyslog.restart_service")
+        if not api_res.get("status"):
+            print("Error while restarting rsyslog: "
+                    "{}.".format(api_res.get("message")))
+
         print("Done.")
