@@ -75,6 +75,8 @@ if __name__ == "__main__":
 
             print("Reloading Rsyslog's pstats configuration")
             Cluster.api_request("services.rsyslogd.rsyslog.configure_pstats")
+            print("Restarting Rsyslog")
+            Cluster.api_request("services.rsyslogd.rsyslog.restart_service")
 
             print('Removing Forwarder...')
             forwarder.delete()
